Hero contact added

--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -1,5 +1,9 @@
 .btn-yellow {
-  @include button($amarillo, block);
+  @include button($amarillo, inline-block);
+}
+
+.btn-yellow-block {
+  @include button($amarillo, block)
 }
 
 .btn-green {
