--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,5 +14,6 @@
 @import 'layout/tocontact';
 @import 'layout/sectionlower';
 @import 'layout/testimonials';
+@import 'layout/form';
 
 @import 'internas/us';
