Create property style added

--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -10,6 +10,10 @@
     color: $grisOscuro;
   }
 
+  fieldset {
+    margin-top: 1rem;
+  }
+
   label {
     font-weight: bold;
     display: block;
